Support for capturing build version.